fixed z-index for full map

--- a/YouthSpots/YouthSpotsBrain/static/scss/map.scss
+++ b/YouthSpots/YouthSpotsBrain/static/scss/map.scss
@@ -126,3 +126,8 @@ body {
   }
 }
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap");
+
+#map {
+  position: absolute;
+  z-index: 0;
+}
