--- a/YouthSpots/YouthSpotsBrain/static/scss/style.scss
+++ b/YouthSpots/YouthSpotsBrain/static/scss/style.scss
@@ -32,6 +32,7 @@ footer {
         flex-direction: row;
         justify-content: space-around;
         margin-bottom: 10px;
+        z-index: 1;
     
         a {
             background-color: $Royal-purple;
